--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -16,9 +16,8 @@
     text-align: center;
     top: 0;
     position: relative;
-    z-index: 10;
-   
-    
+    z-index: 1000;
+    overflow-y: auto;
     
     
 }
